k8s/namespaces/default/minecraft/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft
  namespace: default
  labels:
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minecraft
      app.kubernetes.io/managed-by: flux
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minecraft
        app.kubernetes.io/managed-by: flux
    spec:
      runtimeClassName: youki
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      automountServiceAccountToken: false
      containers:
        - name: minecraft
          # renovate: datasource=docker depName=docker.io/itzg/minecraft-server
          image: docker.io/itzg/minecraft-server:java21-graalvm@sha256:4ec1e842eb0dba60019006c12c73b713a26dd2dc67069717f91e2c0905fbecc2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 19132
              protocol: UDP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: config
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: minecraft-config
