k8s/namespaces/default/minecraft/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft
  namespace: default
  labels:
    app.kubernetes.io/name: minecraft
spec:
  selector:
    app.kubernetes.io/name: minecraft
  ports:
    - port: 19132
      targetPort: 19132
      protocol: UDP
      name: minecraft
  type: ClusterIP
