k8s/namespaces/default/minecraft/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minecraft-https
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minecraft.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: ingress
        - name: authentik
          namespace: ingress
      services:
        - name: minecraft
          port: 19132
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minecraft-http
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`minecraft.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: ingress
        - name: redirect-https
          namespace: ingress
      services:
        - name: minecraft
          port: 19132
